Switch sections to title case to match rest of site.

--- a/templates/resume-template.html
+++ b/templates/resume-template.html
@@ -291,16 +291,16 @@
 	<div id="content">
 		<nav id="page-nav">
 			<ul>
-				<li class="navigation active"><a href="#contact">contact</a></li>
-				<li class="navigation"><a href="#summary">summary</a></li>
-				<li class="navigation"><a href="#experience">experience</a></li>
-				<li class="navigation"><a href="#patents">patents</a></li>
-				<li class="navigation"><a href="#education">education</a></li>
-				<li class="navigation"><a href="#interviews">interviews</a></li>
-				<li class="navigation"><a href="#invited">invited keynotes</a></li>
-				<li class="navigation"><a href="#publishing">publishing credits</a></li>
-				<li class="navigation"><a href="#production">production credits</a></li>
-				<li class="navigation"><a href="#honors">honors</a></li>
+				<li class="navigation active"><a href="#contact">Contact</a></li>
+				<li class="navigation"><a href="#summary">Summary</a></li>
+				<li class="navigation"><a href="#experience">Experience</a></li>
+				<li class="navigation"><a href="#patents">Patents</a></li>
+				<li class="navigation"><a href="#education">Education</a></li>
+				<li class="navigation"><a href="#interviews">Interviews</a></li>
+				<li class="navigation"><a href="#invited">Invited Keynotes</a></li>
+				<li class="navigation"><a href="#publishing">Publishing Credits</a></li>
+				<li class="navigation"><a href="#production">Production Credits</a></li>
+				<li class="navigation"><a href="#honors">Honors</a></li>
 			</ul>
 		</nav>
 		<main id="scrolled-content">
@@ -310,20 +310,20 @@
 				</div>
 			</div>
 			<section class="page-section" id="contact">
-				<h2 class="section-title">contact</h2>
+				<h2 class="section-title">Contact</h2>
 				<div class="section-content">
 					<div id="resume-email" class="center" itemprop="email">$email</div>
 					<div id="resume-weblink"><a href="$website" itemprop="url">$website</a></div>
 				</div>
 			</section>
 			<section class="page-section" id="summary">
-				<h2 class="section-title">summary</h2>
+				<h2 class="section-title">Summary</h2>
 				<div class="section-content">
 					<div id="resume-summary">$summary</div>
 				</div>
 			</section>
 			<section class="page-section" id="experience">
-				<h2 class="section-title">experience</h2>
+				<h2 class="section-title">Experience</h2>
 				<div class="section-content">
 					<ul class="job-list">
 						$job_list
@@ -331,7 +331,7 @@
 				</div>
 			</section>
 			<section class="page-section" id="patents">
-				<h2 class="section-title">patents</h2>
+				<h2 class="section-title">Patents</h2>
 				<div class="section-content">
 					<ul class="patent-list">
 						$patent_list
@@ -339,13 +339,13 @@
 				</div>
 			</section>
 			<section class="page-section" id="education">
-				<h2 class="section-title">education</h2>
+				<h2 class="section-title">Education</h2>
 				<div class="section-content">
 					$education
 				</div>
 			</section>
 			<section class="page-section" id="interviews">
-				<h2 class="section-title">interviews</h2>
+				<h2 class="section-title">Interviews</h2>
 				<div class="section-content">
                     <ul class="simple-list">
                     	$interview_list
@@ -353,7 +353,7 @@
 				</div>
 			</section>
 			<section class="page-section" id="invited">
-				<h2 class="section-title">invited keynotes</h2>
+				<h2 class="section-title">Invited Keynotes</h2>
 				<div class="section-content">
 					<p class="biggertext">Complete list of talks is at <a href="https://kevingoldsmith.com/talks">https://kevingoldsmith.com/talks</a></p>
 					<ul class="simple-list">
@@ -362,7 +362,7 @@
 				</div>
 			</section>
 			<section class="page-section" id="publishing">
-				<h2 class="section-title">publishing credits</h2>
+				<h2 class="section-title">Publishing Credits</h2>
 				<div class="section-content">
 					<ul class="simple-list">
 						$publication_list
@@ -370,7 +370,7 @@
 				</div>
 			</section>
 			<section class="page-section" id="production">
-				<h2 class="section-title">production credits</h2>
+				<h2 class="section-title">Production Credits</h2>
 				<div class="section-content">
 					<ul class="simple-list">
 						$production_list
@@ -378,7 +378,7 @@
 				</div>
 			</section>
 			<section class="page-section" id="honors">
-				<h2 class="section-title">honors</h2>
+				<h2 class="section-title">Honors</h2>
 				<div class="section-content">
 					<ul class="simple-list">
 						$honor_list
