--- a/templates/resume-template.html
+++ b/templates/resume-template.html
@@ -392,7 +392,8 @@
 	</footer>
 	<script src="js/modernizr.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="js/googleevents.js"></script>
+	<script src="js/googleevents.js"></script>
+	<script src="js/fontfaceobserver.js"></script>
 
     <script>
 	$$(document).ready(function() {
