--- a/templates/talk-page-template.html
+++ b/templates/talk-page-template.html
@@ -57,6 +57,7 @@
 		kevingoldsmith.com
 	</footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="../js/googleevents.js"></script>
+	<script src="../js/googleevents.js"></script>
+	<script src="../js/fontfaceobserver.js"></script>
 </body>
 </html>
