--- a/templates/music-template.html
+++ b/templates/music-template.html
@@ -197,5 +197,6 @@
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="js/googleevents.js"></script>
+    <script src="js/fontfaceobserver.js"></script>
     </body>
 </html>
