--- a/templates/photography-template.html
+++ b/templates/photography-template.html
@@ -72,6 +72,7 @@
 	</footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="js/googleevents.js"></script>
+	<script src="js/fontfaceobserver.js"></script>
 
     <script type="text/javascript">
     function resizeIframe()
