--- a/templates/site-index-template.html
+++ b/templates/site-index-template.html
@@ -169,6 +169,7 @@
 	</div>
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="js/googleevents.js"></script>
+	<script src="js/googleevents.js"></script>
+	<script src="js/fontfaceobserver.js"></script>
 </body>
 </html>
