--- a/templates/talk-index-template.html
+++ b/templates/talk-index-template.html
@@ -144,7 +144,8 @@
 	</footer>
 	<script src="../js/modernizr.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="../js/googleevents.js"></script>
+	<script src="../js/googleevents.js"></script>
+	<script src="../js/fontfaceobserver.js"></script>
 	<script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js" integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q==" crossorigin=""></script>
 	<script type="text/javascript">
 	    var map = L.map('map_canvas').setView([51.505, -0.09], 2);
