--- a/templates/writing-template.html
+++ b/templates/writing-template.html
@@ -106,6 +106,7 @@
 	<script src="js/modernizr.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="js/googleevents.js"></script>
+	<script src="js/fontfaceobserver.js"></script>
 
     <!-- Google Analytics -->
     <script>
