--- a/templates/music-template.html
+++ b/templates/music-template.html
@@ -125,6 +125,7 @@
             <ul>
                 <li><img src="http://www.intonarumori.com/images/cursedreamcover300x300.jpg" /><div><span class="release-song">A Curse Uttered, A Dream Forgotten</span>, <span class="release-recordlabel">Singular Sphere Records</span>, <span class="release-media">MP3 single</span>, <span class="release-year">2008</span></div></li>
                 <li><img src="http://www.intonarumori.com/images/fridhemsplancover300x300.jpg" /><div><span class="release-song">Fridhemsplan</span>, <span class="release-recordlabel">self-released<span>, <span class="release-media">MP3 single</span>, <span class="release-year">2013</span></div></li>
+                <li><img width=300 height=300 src="https://www.kevingoldsmith.com/img/Intonarumori_WeAuralOrbs.jpg" /><div><span class="release-song">We Aural Orbs</span>, <span class="release-recordlabel">Silber<span>, <span class="release-media">MP3 single</span>, <span class="release-year">2019</span></div></lu>
             </ul>
         </section>
         <div id="soundcloud" class="ut">
