added Hive, update job description for Avvo and AstrumU, update CSS for talk index page.

--- a/templates/talk-index-template.html
+++ b/templates/talk-index-template.html
@@ -112,7 +112,7 @@
 		$futuretalks
 		<section id="featured-talks">
 			<h2>Book Me</h2>
-			<p>For information about having me speak at your event, please see <a href="bookme.html">this</a>.</p>
+			<p class="p-indent">For information about having me speak at your event, please see <a href="bookme.html">this</a>.</p>
 			
 			<h2>Current Talks</h2>
 			<ul>
