--- a/public/css/main.css
+++ b/public/css/main.css
@@ -108,6 +108,9 @@ footer {
 	width: 100%;
 	padding: 0.5em 0em 0em .5em;
 }
+.p-indent {
+	padding-left: 1em;
+}
 
 /* Small screens */
 @media only screen {
