update to use new google analytics scripts

--- a/templates/photography-template.html
+++ b/templates/photography-template.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-2753331-2"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'UA-2753331-2');
+	</script>
+
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=contain">
@@ -10,10 +20,6 @@
     <meta name="google-site-verification" content="6-e5GrTPsmDpSGk6vICFdLGxj9buwsS1qiaxZKKj3Qw" />
 	<title>Photography: Kevin Goldsmith</title>
 	<link rel="canonical" href="https://kevingoldsmith.com/photography.html" />
-
-    <!-- Google ownership links -->
-    <link rel="author" href="https://plus.google.com/+KevinGoldsmith"/>
-    <link rel="publisher" href="https://plus.google.com/111904464094073716491" />
 
     <link rel="dns-prefetch" href="https://fonts.googleapis.com" />
 	<link rel="dns-prefetch" href="https://ajax.googleapis.com" />
