--- a/templates/writing-template.html
+++ b/templates/writing-template.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html class="no-js">
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-2753331-2"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-2753331-2');
+    </script>
+
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=contain">
@@ -19,10 +29,6 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Didact+Gothic" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab" />
     <link rel="stylesheet" href="css/main.css" />
-
-    <!-- Google ownership links -->
-    <link rel="author" href="https://plus.google.com/+KevinGoldsmith"/>
-    <link rel="publisher" href="https://plus.google.com/111904464094073716491" />
 
     <style>
         .buttonlist {
