--- a/templates/header.html
+++ b/templates/header.html
@@ -1,16 +1,4 @@
-{% set pages = [
-    ('resume.html', 'technology leader'),
-    ('talks/index.html', 'speaker'),
-    ('writing.html', 'writer'),
-    ('music.html', 'musician'),
-    ('photography.html', 'photographer')
-] -%}
-{% set active_page = active_page|default('technology leader') -%}
 <header id="header">
     <div id="name"><a href="{% if not debug_mode %}https://kevingoldsmith.com/{% else %}index.html{% endif %}">Kevin Goldsmith</a></div>
-    <div id="site-nav">
-        <ul>{% for href, caption in pages %}{% if caption == active_page %}
-            <li class="current-page">{{ caption }}</li>{% else %}<li><a href="{% if not debug_mode %}https://kevingoldsmith.com/{% endif %}{{ href }}">{{ caption }}</a></li>{% endif %}
-        {% endfor %}</ul>
-    </div>
+    {% include 'sitenav.html' %}
 </header>
