--- a/templates/photography-template-jinja.html
+++ b/templates/photography-template-jinja.html
@@ -74,9 +74,7 @@
 	<main id="content">
 	<iframe id="ifrm" src="https://photo.kevingoldsmith.com" style="border:none; width:100%"></iframe>
 	</main>
-	<footer id="footer">
-		kevingoldsmith.com
-	</footer>
+    {% include 'footer.html' %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="js/googleevents.js"></script>
 	<script src="js/fontfaceobserver.js"></script>
