--- a/templates/resume-template-jinja.html
+++ b/templates/resume-template-jinja.html
@@ -386,9 +386,7 @@
 			</section>
 		</main>
 	</div>
-	<footer>
-		kevingoldsmith.com
-	</footer>
+    {% include 'footer.html' %}
 	<script src="js/modernizr.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="js/googleevents.js"></script>
