--- a/templates/music-template-jinja.html
+++ b/templates/music-template-jinja.html
@@ -200,9 +200,7 @@
             </ul>
         </section>
     </main>
-    <footer>
-        kevingoldsmith.com
-    </footer>
+    {% include 'footer.html' %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="js/googleevents.js"></script>
     <script src="js/fontfaceobserver.js"></script>
