--- a/templates/writing-template-jinja.html
+++ b/templates/writing-template-jinja.html
@@ -107,9 +107,7 @@
             {% endfor %}
         </ul>
     </main>
-    <footer>
-        kevingoldsmith.com
-    </footer>
+    {% include 'footer.html' %}
 	<script src="js/modernizr.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="js/googleevents.js"></script>
