--- a/templates/talk-page-template-jinja.html
+++ b/templates/talk-page-template-jinja.html
@@ -32,14 +32,7 @@
     <link rel="stylesheet" href="talkpages.css" />
 </head>
 <body>
-	<header id="header">
-        <div id="name"><a href="{{siteroot}}">Kevin Goldsmith</a></div>
-		<nav id="site-nav">
-			<ul>
-                {{sitenav}}
-			</ul>
-		</nav>
-	</header>
+	{% include 'talk-header.html' %}
 	<main id="content">
 		<div><a href="{{talkroot}}">< talks</a></div>
 		<h1 id="talktitle">{{talktitle}}</h1>
