--- a/templates/photography-template.html
+++ b/templates/photography-template.html
@@ -63,19 +63,18 @@
 <body>
 <!-- thanks to https://codepen.io/eksch/pen/xwdOeK for the page navigation code example (I had to tweak some)  -->
 	<header id="header">
-        <div id="name"><a href="$siteroot">Kevin Goldsmith</a></div>
+        <div id="name"><a href="{% if debug_mode %}index.html{% else %}https://kevingoldsmith.com{% endif %}">Kevin Goldsmith</a></div>
 		<nav id="site-nav">
 			<ul>
-				$sitenav
+				{% set active_page = 'photographer' %}
+                {% include 'header.html' %}
 			</ul>
 		</nav>
 	</header>
 	<main id="content">
 	<iframe id="ifrm" src="https://photo.kevingoldsmith.com" style="border:none; width:100%"></iframe>
 	</main>
-	<footer id="footer">
-		kevingoldsmith.com
-	</footer>
+    {% include 'footer.html' %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="js/googleevents.js"></script>
 	<script src="js/fontfaceobserver.js"></script>
@@ -83,13 +82,13 @@
     <script type="text/javascript">
     function resizeIframe()
     {
-        $$("#ifrm").css("height", $$(window).height() - $$("#header").position().top - $$("#header").height() - $$("#footer").height() - 60);
+        $("#ifrm").css("height", $(window).height() - $("#header").position().top - $("#header").height() - $("#footer").height() - 60);
     }
 
-    $$(document).ready(function()
+    $(document).ready(function()
     {
     	resizeIframe()             
-        $$(window).resize(function(event) {
+        $(window).resize(function(event) {
             /* Act on the event */
             resizeIframe();
         });
