--- a/templates/talk-index-template.html
+++ b/templates/talk-index-template.html
@@ -14,16 +14,12 @@
 	<meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>$title</title>
-    <meta name="description" content="a list of talks, panels and workshops by $author">
-    <meta name="author" content="$author">
+    <title>Talks: Kevin Goldsmith</title>
+    <meta name="description" content="a list of talks, panels and workshops by Kevin Goldsmith">
+    <meta name="author" content="Kevin Goldsmith">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="google-site-verification" content="$googsiteverification" />
+    <meta name="google-site-verification" content="{{googsiteverification}}" />
 	<link rel="canonical" href="https://kevingoldsmith.com/talks/" />
-
-    <!-- Google ownership links -->
-    <link rel="author" href="$googauthor"/>
-    <link rel="publisher" href="$googpublisher" />
 
     <link rel="dns-prefetch" href="https://fonts.googleapis.com" />
 	<link rel="dns-prefetch" href="https://ajax.googleapis.com" />
@@ -107,51 +103,56 @@
 	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
 </head>
 <body>
-	<header id="header">
-        <div id="name"><a href="$siteroot">Kevin Goldsmith</a></div>
-		<nav id="site-nav">
-			<ul>
-                $sitenav
-			</ul>
-		</nav>
-	</header>
+	{% set talk_index=true %}
+	{% include 'talk-header.html' %}
 	<main id="content">
 		<div id="map_wrapper">
 	    	<div id="map_canvas" class="mapping"></div>
 		</div>
-		$futuretalks
+		{% if futuretalks %}
+		<section id="upcoming-talks">
+			<h2>Upcoming Talks</h2>
+			<ul>
+				{% for talk in futuretalks %}<li><span class="conferencename">{% if talk.url %}<a class="outbound" href="{{talk.url}}">{% endif %}{{talk.name}}{% if talk.url %}</a>{% endif %}</span> - <span class="conferencedate">{{talk.date}}</span> - <span class="conferencelocation">{{talk.location}}</span></li>
+				{% endfor %}
+			</ul>
+		</section>
+		{% endif %}
 		<section id="featured-talks">
 			<h2>Book Me</h2>
 			<p class="p-indent">For information about having me speak at your event, please see <a href="bookme.html">this</a>.</p>
 			
 			<h2>Current Talks</h2>
 			<ul>
-				$currenttalklist
+				{% for talk in currenttalklist %}<li><a href="{{talk.file}}"><span class="talk-title">{{talk.name}}</span></a><div class="talk-description">{{talk.description}}</div></li>
+				{% endfor %}
 			</ul>
 		</section>
 		<section id="other-talks">
 			<h2>Older Talks</h2>
 			<ul class="year-list">
-				$othertalklist
+				{% for talk in othertalklist %}<li><a href="{{talk.file}}"><span class="talk-title">{{talk.name}}</span></a> ({{talk.years}})</li>
+				{% endfor %}
 			</ul>
 		</section>
 		<section id="panels">
 			<h2>Panels</h2>
 			<ul class="panel-list">
-				$panellist
+				{% for panel in panellist %}
+				<li><span class="talk-title">{% if panel.url %}<a class="outbound" href="{{panel.url}}">{% endif %}{{panel.name}}{% if panel.url %}</a>{% endif %}</span>, <span class="conference">{{panel.conference}}</span>, <span class="date">{{panel.date}}</span></li>
+				{% endfor %}
 			</ul>
 		</section>
 		<section id="workshops">
 			<h2>Workshops</h2>
 			<ul class="workshop-list">
-				$workshoplist
+				{% for lab in workshoplist %}<li><span class="talk-title">{{lab.name}}</span>, <span class="conference">{{lab.conference}}</span>, <span class="date">{{lab.date}}</span></li>
+				{% endfor %}
 			</ul>
 		</section>
 	<!-- end #mainContent -->
 	</main>
-	<footer>
-		kevingoldsmith.com
-	</footer>
+	{% include 'footer.html' %}
 	<script src="../js/modernizr.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="../js/googleevents.js"></script>
@@ -163,11 +164,13 @@
 
 	    // Multiple Markers
 	    var markers = [
-	        $markerlist
+			{% for marker in markerlist %}['{{marker.name}} {{marker.year}}', {{marker.lat}}, {{marker.lon}}],
+	        {% endfor %}
 	    ];
 	    // Info Window Content
 	    var infoWindowContent = [
-	        $infolist
+			{% for info in infolist %}['<div class="info_content"><h3>{{info.conference_name}} {{info.year}}</h3><p>{% for talk in info.talks %}{{talk}}<br />{% endfor %}</p></div>'],
+			{% endfor %}
 	    ];
 
 	    for(var i = 0; i < markers.length; i++) {
