--- a/templates/writing-template.html
+++ b/templates/writing-template.html
@@ -56,6 +56,12 @@
         .article {
             margin-bottom: 1em;
         }
+        .article p:first-of-type {
+            margin-top: 0em;
+        }
+        .article p:last-of-type {
+            margin-bottom: 0em;
+        }
         .articlename {
             font-size: 1.5em;
         }
@@ -89,37 +95,29 @@
     </style>
 </head>
 <body>
-    <header id="header">
-        <div id="name"><a href="$siteroot">Kevin Goldsmith</a></div>
-        <nav id="site-nav">
-            <ul>
-                $sitenav
-            </ul>
-        </nav>
-    </header>
+    {% set active_page = 'writer' %}
+    {% include 'header.html' %}
     <main id="content">
         <div class="buttonlist">
             filter by tag: <button id="reset" class="clickedbutton" onclick="resetFilter('articlelist'); selectbutton(this.id)">Show All</button>
-            $tagbuttons
+            {% for button in tagbuttons %}<button id="{{button.tag}}" onclick="filterTag('articlelist','{{button.tag}}')">{{button.name}}</button>{% endfor %}
         </div>
         <ul class="articlelist">
-            $writinglist
+            {% for writing in writinglist %}<li class="article" data-tags="{{writing['datatags']|join(' ')}}"><div class="articlename"><a href="{{writing['url']}}">{{writing['name']}}</a></div><div class="articledate">{{writing['formatteddate']}}</div><div class="articledescription">{{writing['description']}}</div><ul class="keywordlist">{% for keyword in writing['keywords'] %}<li class="keyword">{{keyword}}</li>{% endfor %}</ul></li>
+            {% endfor %}
         </ul>
     </main>
-    <footer>
-        kevingoldsmith.com
-    </footer>
+    {% include 'footer.html' %}
 	<script src="js/modernizr.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="js/googleevents.js"></script>
 	<script src="js/fontfaceobserver.js"></script>
 
-    <!-- Google Analytics -->
     <script>
         // Filter tag
         function filterTag (filter, tag) {
             resetFilter(filter);
-            var items = $$('.' + filter + ' > li');
+            var items = $('.' + filter + ' > li');
 
             for (var i = 0; i < items.length; i++) {
                 var itemTags = items[i].getAttribute('data-tags');
@@ -136,13 +134,13 @@
 
         // Reset filters
         function resetFilter (filter) {
-            $$('.' + filter + ' > li').attr('data-toggle', 'on')
+            $('.' + filter + ' > li').attr('data-toggle', 'on')
         }
 
         // Reset select
         function selectbutton(select_id) {
-            $$('.buttonlist > button').removeClass('clickedbutton');
-            $$('.buttonlist > ' + '#' + select_id).addClass('clickedbutton');
+            $('.buttonlist > button').removeClass('clickedbutton');
+            $('.buttonlist > ' + '#' + select_id).addClass('clickedbutton');
         }
         </script>
     </body>
